exports[`Actions should render actions 1`] = `
<div
  className="tc-actions btn-group">
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-asterisk"
      title={null} />
    <span>
      Preparations
    </span>
  </button>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-file-excel-o"
      title={null} />
    <span>
      Datasets
    </span>
  </button>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-star"
      title={null} />
    <span>
      Favorites
    </span>
  </button>
  <div
    className="dropdown btn-group btn-group-default">
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="dropdown-id"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button">
      <span>
        <i
          aria-hidden="true"
          className="fa fa-file-excel-o"
          title={null} />
        <span>
          related items
        </span>
      </span>
       
      <span
        className="caret" />
    </button>
    <ul
      aria-labelledby="dropdown-id"
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          label="document 1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          document 1
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          label="document 2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          document 2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Actions should render actions with "link" theme 1`] = `
<div
  className="tc-actions btn-group">
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    role="link"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-asterisk"
      title={null} />
    <span>
      Preparations
    </span>
  </button>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    role="link"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-file-excel-o"
      title={null} />
    <span>
      Datasets
    </span>
  </button>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    role="link"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-star"
      title={null} />
    <span>
      Favorites
    </span>
  </button>
  <div
    className="dropdown btn-group btn-group-link">
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-link"
      disabled={false}
      id="dropdown-id"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button">
      <span>
        <i
          aria-hidden="true"
          className="fa fa-file-excel-o"
          title={null} />
        <span>
          related items
        </span>
      </span>
       
      <span
        className="caret" />
    </button>
    <ul
      aria-labelledby="dropdown-id"
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          label="document 1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          document 1
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          label="document 2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          document 2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Actions should render actions with defined tooltip placement 1`] = `
<div
  className="tc-actions btn-group">
  <button
    aria-describedby={42}
    className="btn btn-link"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-asterisk"
      title={null} />
  </button>
  <button
    aria-describedby={42}
    className="btn btn-link"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-file-excel-o"
      title={null} />
  </button>
  <button
    aria-describedby={42}
    className="btn btn-link"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-star"
      title={null} />
  </button>
  <div
    className="dropdown btn-group btn-group-link">
    <button
      aria-describedby={42}
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-link"
      disabled={false}
      id="dropdown-id"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button">
      <span>
        <i
          aria-hidden="true"
          className="fa fa-file-excel-o"
          title={null} />
      </span>
       
      <span
        className="caret" />
    </button>
    <ul
      aria-labelledby="dropdown-id"
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          label="document 1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          document 1
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          label="document 2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          document 2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Actions should render actions with hidden labels and tooltips 1`] = `
<div
  className="tc-actions btn-group">
  <button
    aria-describedby={42}
    className="btn btn-primary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-asterisk"
      title={null} />
  </button>
  <button
    aria-describedby={42}
    className="btn btn-default"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-file-excel-o"
      title={null} />
  </button>
  <button
    aria-describedby={42}
    className="btn btn-default"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-star"
      title={null} />
  </button>
  <div
    className="dropdown btn-group btn-group-default">
    <button
      aria-describedby={42}
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="dropdown-id"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button">
      <span>
        <i
          aria-hidden="true"
          className="fa fa-file-excel-o"
          title={null} />
      </span>
       
      <span
        className="caret" />
    </button>
    <ul
      aria-labelledby="dropdown-id"
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          label="document 1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          document 1
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          label="document 2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          document 2
        </a>
      </li>
    </ul>
  </div>
</div>
`;
